--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "helmet": "^3.23.3"
+    "helmet": "^3.23.3",
+    "mongoose": "^5.9.25"
   }
 }
